[gd_scene load_steps=29 format=4 uid="uid://bifg0om83dt7j"]

[ext_resource type="Script" uid="uid://i8elsoobnbx8" path="res://scenes/playground.gd" id="1_77m0m"]
[ext_resource type="TileSet" uid="uid://c537katjoknov" path="res://world/level_tileset.tres" id="1_c81co"]
[ext_resource type="PackedScene" uid="uid://31y11begqd5e" path="res://actors/door.tscn" id="2_518a5"]
[ext_resource type="PackedScene" uid="uid://82aeqqi2rddp" path="res://ui/ui.tscn" id="2_sdlse"]
[ext_resource type="PackedScene" uid="uid://dftg54mjw1fp8" path="res://networking/debug_client.tscn" id="3_uvqt1"]
[ext_resource type="PackedScene" uid="uid://dlw6umpweb060" path="res://actors/key.tscn" id="3_vaqfn"]
[ext_resource type="PackedScene" uid="uid://cwf4yqf0soyw2" path="res://ui/fueguito_count.tscn" id="4_0v4kh"]
[ext_resource type="Script" uid="uid://dgbfoqx0hh2ki" path="res://actors/player_spawner.gd" id="4_o5gmv"]
[ext_resource type="PackedScene" uid="uid://cxpnihdumldpm" path="res://actors/button.tscn" id="5_cj3ad"]
[ext_resource type="PackedScene" uid="uid://c5erylmd5leup" path="res://actors/drop_box.tscn" id="9_5ywgi"]
[ext_resource type="Script" uid="uid://nqtkxd74x327" path="res://actors/respawn_one.gd" id="10_gxl6j"]
[ext_resource type="PackedScene" uid="uid://4x0l8tl5cstu" path="res://actors/weight_platform.tscn" id="10_qsupa"]
[ext_resource type="Texture2D" uid="uid://btmhdxqp8po3t" path="res://assets/portal.png" id="11_7dawc"]
[ext_resource type="PackedScene" uid="uid://bh44brmlp1s8k" path="res://actors/platform.tscn" id="11_sskg7"]
[ext_resource type="PackedScene" uid="uid://bde6w2sxt4efv" path="res://actors/coin.tscn" id="14_sjfhm"]
[ext_resource type="PackedScene" uid="uid://1x0pl6tlptup" path="res://actors/spring.tscn" id="16_16d4q"]
[ext_resource type="PackedScene" uid="uid://f85oyoih74nu" path="res://actors/evil_bee.tscn" id="17_cybxe"]
[ext_resource type="Script" uid="uid://cyynagwn7s8di" path="res://scripts/evilbee_follow_path.gd" id="19_wofl2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6lj5"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cq282"]
atlas = ExtResource("11_7dawc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12nip"]
atlas = ExtResource("11_7dawc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8toc"]
atlas = ExtResource("11_7dawc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbejy"]
atlas = ExtResource("11_7dawc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flobl"]
atlas = ExtResource("11_7dawc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg7nx"]
atlas = ExtResource("11_7dawc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00d35"]
atlas = ExtResource("11_7dawc")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oblhc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq282")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12nip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8toc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbejy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flobl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg7nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00d35")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_m5r1r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 990, 211, 0, 0, 0, 0, 477, 200, 0, 0, 0, 0, 466, 514, 0, 0, 0, 0, 654, 511, 0, 0, 0, 0, 985, 272, 0, 0, 0, 0, 990, 211)
}
point_count = 6

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_77m0m")

[node name="UI" parent="." instance=ExtResource("2_sdlse")]

[node name="ClientMockup" parent="UI" instance=ExtResource("3_uvqt1")]
offset_left = 110.0
offset_top = 499.0
offset_right = 110.0
offset_bottom = 499.0

[node name="HBoxContainer2" parent="UI" instance=ExtResource("4_0v4kh")]

[node name="TileMap" type="Node2D" parent="."]

[node name="PlayWorld" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAIAAQAHAAEAAAACAAMAAQADAAIAAAACAAQAAQADAAIAAAACAAUAAQADAAIAAAACAAYAAQADAAIAAAACAAcAAQADAAIAAAACAAgAAQADAAIAAAACAAkAAQADAAIAAAACAAoAAQADAAIAAAACAAsAAQADAAIAAAACAAwAAQADAAIAAAACAA0AAQAHAAIAAAADAAIAAQACAAMAAAADAA0AAQACAAEAAAAEAAIAAQACAAMAAAAEAA0AAQACAAEAAAAFAAIAAQACAAMAAAAFAA0AAQACAAEAAAAcABEAAQACAAEAAAAdABEAAQACAAEAAAAeABEAAQACAAEAAAAfABEAAQACAAEAAAAgABEAAQACAAEAAAAhAAcAAQABAAIAAAAhAAgAAQABAAIAAAAhAAkAAQABAAIAAAAhAAoAAQABAAIAAAAhAAsAAQABAAIAAAAhAAwAAQABAAIAAAAhAA0AAQABAAIAAAAhAA4AAQABAAIAAAAhAA8AAQABAAIAAAAhABAAAQABAAIAAAAhABEAAQAIAAIAAAAhAAIAAQAIAAEAAAAGAA4AAQAHAAIAAAAHAA4AAQACAAEAAAAIAA4AAQACAAEAAAAJAA4AAQACAAEAAAAKAA4AAQACAAEAAAALAA4AAQACAAEAAAAGAAIAAQACAAMAAAAHAAIAAQACAAMAAAAIAAIAAQACAAMAAAAJAAIAAQACAAMAAAAKAAIAAQACAAMAAAALAAIAAQACAAMAAAAMAAIAAQACAAMAAAANAAIAAQACAAMAAAAOAAIAAQACAAMAAAAPAAIAAQACAAMAAAAQAAIAAQACAAMAAAARAAIAAQACAAMAAAASAAIAAQACAAMAAAATAAIAAQACAAMAAAAUAAIAAQACAAMAAAAVAAIAAQACAAMAAAAWAAIAAQACAAMAAAAXAAIAAQACAAMAAAAYAAIAAQACAAMAAAAZAAIAAQACAAMAAAAaAAIAAQACAAMAAAAbAAIAAQACAAMAAAAcAAIAAQACAAMAAAAdAAIAAQACAAMAAAAeAAIAAQACAAMAAAAfAAIAAQACAAMAAAAgAAIAAQACAAMAAAAhAAMAAQABAAIAAAAhAAYAAQABAAIAAAAhAAUAAQABAAIAAAAhAAQAAQABAAIAAAAUABEAAQACAAEAAAATABEAAQACAAEAAAASABEAAQACAAEAAAARABEAAQACAAEAAAAQABEAAQACAAEAAAAPABEAAQACAAEAAAAOABEAAQACAAEAAAANABEAAQACAAEAAAAMABEAAQAHAAIAAAAMAA4AAQADAAEAAAAMAA8AAQADAAIAAAAMABAAAQADAAIAAAAGAA0AAQADAAEAAAAVABEAAQACAAEAAAAbABEAAQACAAEAAAAZAA0AAQABAAUAAAAZAAwAAQACAAgAAAAZAAsAAQACAAgAAAAaAAoAAQACAAgAAAAaAAkAAQACAAgAAAAaAAgAAQACAAgAAAAaAAsAAQACAAgAAAAaAAwAAQACAAgAAAAaAA0AAQADAAUAAAAZAAoAAQACAAgAAAAZAAgAAQACAAgAAAAYAAsAAQACAAgAAAAYAAoAAQACAAgAAAAYAAwAAQACAAgAAAAYAA0AAQACAAgAAAAYAA4AAQACAAgAAAAXAA4AAQACAAgAAAAWAA0AAQACAAgAAAAXAA0AAQACAAgAAAAXAAwAAQACAAgAAAAXAAsAAQACAAgAAAAXAAoAAQACAAgAAAAWAAoAAQACAAgAAAAWAAsAAQACAAgAAAAWAAwAAQACAAgAAAAWABEAAQACAAEAAAAXABEAAQACAAEAAAAYABEAAQACAAEAAAAZABEAAQACAAEAAAAaABEAAQACAAEAAAAgABAAAQACAAgAAAAgAA8AAQACAAgAAAAgAA4AAQACAAgAAAAgAA0AAQACAAgAAAAgAAwAAQACAAgAAAAgAAsAAQACAAgAAAAgAAoAAQACAAgAAAAgAAkAAQACAAgAAAAgAAgAAQACAAgAAAAgAAcAAQACAAgAAAAgAAYAAQACAAgAAAAgAAUAAQACAAgAAAAgAAQAAQACAAgAAAAgAAMAAQACAAgAAAAfABAAAQACAAgAAAAfAA8AAQACAAgAAAAfAA4AAQACAAgAAAAfAA0AAQACAAgAAAAfAAwAAQACAAgAAAAfAAsAAQACAAgAAAAfAAoAAQACAAgAAAAfAAkAAQACAAgAAAAfAAgAAQACAAgAAAAfAAcAAQACAAgAAAAfAAYAAQACAAgAAAAfAAUAAQACAAgAAAAfAAQAAQACAAgAAAAfAAMAAQACAAgAAAAeABAAAQACAAgAAAAeAA8AAQACAAgAAAAeAA4AAQACAAgAAAAeAA0AAQACAAgAAAAeAAwAAQACAAgAAAAeAAsAAQACAAgAAAAeAAoAAQACAAgAAAAeAAkAAQACAAgAAAAeAAgAAQACAAgAAAAeAAcAAQACAAgAAAAeAAYAAQACAAgAAAAeAAUAAQACAAgAAAAeAAQAAQACAAgAAAAeAAMAAQACAAgAAAAdABAAAQACAAgAAAAdAA8AAQACAAgAAAAdAA4AAQACAAgAAAAdAA0AAQACAAgAAAAdAAwAAQACAAgAAAAdAAsAAQACAAgAAAAdAAoAAQACAAgAAAAdAAkAAQACAAgAAAAdAAgAAQACAAgAAAAdAAcAAQACAAgAAAAdAAYAAQACAAgAAAAdAAUAAQACAAgAAAAdAAQAAQACAAgAAAAdAAMAAQACAAgAAAAcABAAAQACAAgAAAAcAA8AAQACAAgAAAAcAA4AAQACAAgAAAAcAA0AAQACAAgAAAAcAAwAAQACAAgAAAAcAAsAAQACAAgAAAAcAAoAAQACAAgAAAAcAAkAAQACAAgAAAAcAAgAAQACAAgAAAAcAAcAAQACAAgAAAAcAAYAAQACAAgAAAAcAAUAAQACAAgAAAAcAAQAAQACAAgAAAAcAAMAAQACAAgAAAAbABAAAQACAAgAAAAbAA8AAQACAAgAAAAbAA4AAQACAAgAAAAbAA0AAQACAAgAAAAbAAwAAQACAAgAAAAbAAsAAQACAAgAAAAbAAoAAQACAAgAAAAbAAkAAQACAAgAAAAbAAgAAQACAAgAAAAbAAcAAQACAAgAAAAbAAYAAQACAAgAAAAbAAUAAQACAAgAAAAbAAQAAQACAAgAAAAbAAMAAQACAAgAAAAaABAAAQACAAgAAAAaAA8AAQACAAgAAAAaAA4AAQACAAgAAAAaAAcAAQACAAgAAAAaAAYAAQACAAgAAAAaAAUAAQACAAgAAAAaAAQAAQACAAgAAAAaAAMAAQACAAgAAAAZABAAAQACAAgAAAAZAA8AAQACAAgAAAAZAA4AAQACAAgAAAAZAAkAAQACAAgAAAAZAAcAAQACAAgAAAAZAAYAAQACAAgAAAAZAAUAAQACAAgAAAAZAAQAAQACAAgAAAAZAAMAAQACAAgAAAAYABAAAQACAAgAAAAYAA8AAQADAAUAAAAYAAkAAQACAAgAAAAYAAgAAQACAAgAAAAYAAcAAQACAAgAAAAYAAYAAQACAAgAAAAYAAUAAQACAAgAAAAYAAQAAQACAAgAAAAYAAMAAQACAAgAAAAXABAAAQACAAgAAAAXAA8AAQABAAUAAAAXAAkAAQACAAgAAAAXAAgAAQACAAgAAAAXAAcAAQACAAgAAAAXAAYAAQACAAgAAAAXAAUAAQACAAgAAAAXAAQAAQACAAgAAAAXAAMAAQACAAgAAAAWABAAAQACAAgAAAAWAA8AAQACAAgAAAAWAA4AAQACAAgAAAAWAAkAAQACAAgAAAAWAAgAAQACAAgAAAAWAAcAAQACAAgAAAAWAAYAAQACAAgAAAAWAAUAAQACAAgAAAAWAAQAAQACAAgAAAAWAAMAAQACAAgAAAAVABAAAQACAAgAAAAVAA8AAQACAAgAAAAVAA4AAQACAAgAAAAVAA0AAQACAAgAAAAVAAwAAQACAAgAAAAVAAsAAQACAAgAAAAVAAoAAQACAAgAAAAVAAkAAQACAAgAAAAVAAgAAQACAAgAAAAVAAcAAQACAAgAAAAVAAYAAQACAAgAAAAVAAUAAQACAAgAAAAVAAQAAQACAAgAAAAVAAMAAQACAAgAAAAUABAAAQACAAgAAAAUAA8AAQACAAgAAAAUAA4AAQACAAgAAAAUAA0AAQACAAgAAAAUAAwAAQACAAgAAAAUAAsAAQACAAgAAAAUAAoAAQACAAgAAAAUAAkAAQACAAgAAAAUAAgAAQACAAgAAAAUAAcAAQACAAgAAAAUAAYAAQACAAgAAAAUAAUAAQACAAgAAAAUAAQAAQACAAgAAAAUAAMAAQACAAgAAAATABAAAQACAAgAAAATAA8AAQACAAgAAAATAA4AAQACAAgAAAATAA0AAQACAAgAAAATAAwAAQACAAgAAAATAAsAAQACAAgAAAATAAoAAQACAAgAAAATAAkAAQACAAgAAAATAAgAAQACAAgAAAATAAcAAQACAAgAAAATAAYAAQACAAgAAAATAAUAAQACAAgAAAATAAQAAQACAAgAAAATAAMAAQACAAgAAAASABAAAQACAAgAAAASAA8AAQACAAgAAAASAA4AAQACAAgAAAASAA0AAQACAAgAAAASAAwAAQACAAgAAAASAAsAAQACAAgAAAASAAoAAQACAAgAAAASAAkAAQACAAgAAAASAAgAAQACAAgAAAASAAcAAQACAAgAAAASAAYAAQACAAgAAAASAAUAAQACAAgAAAASAAQAAQACAAgAAAASAAMAAQACAAgAAAARABAAAQACAAgAAAARAA8AAQACAAgAAAARAA4AAQACAAgAAAARAA0AAQACAAgAAAARAAwAAQACAAgAAAARAAsAAQACAAgAAAARAAoAAQACAAgAAAARAAkAAQACAAgAAAARAAgAAQACAAgAAAARAAcAAQACAAgAAAARAAYAAQACAAgAAAARAAUAAQACAAgAAAARAAQAAQACAAgAAAARAAMAAQACAAgAAAAQABAAAQACAAgAAAAQAA8AAQACAAgAAAAQAA4AAQACAAgAAAAQAA0AAQACAAgAAAAQAAwAAQACAAgAAAAQAAsAAQACAAgAAAAQAAoAAQACAAgAAAAQAAkAAQACAAgAAAAQAAgAAQACAAgAAAAQAAcAAQACAAgAAAAQAAYAAQACAAgAAAAQAAUAAQACAAgAAAAQAAQAAQACAAgAAAAQAAMAAQACAAgAAAAPABAAAQACAAgAAAAPAA8AAQACAAgAAAAPAA4AAQACAAgAAAAPAA0AAQACAAgAAAAPAAwAAQACAAgAAAAPAAsAAQACAAgAAAAPAAoAAQACAAgAAAAPAAkAAQACAAgAAAAPAAgAAQACAAgAAAAPAAcAAQACAAgAAAAPAAYAAQACAAgAAAAPAAUAAQACAAgAAAAPAAQAAQACAAgAAAAPAAMAAQACAAgAAAAOABAAAQACAAgAAAAOAA8AAQACAAgAAAAOAA4AAQACAAgAAAAOAA0AAQACAAgAAAAOAAwAAQACAAgAAAAOAAsAAQACAAgAAAAOAAoAAQACAAgAAAAOAAkAAQACAAgAAAAOAAgAAQACAAgAAAAOAAcAAQACAAgAAAAOAAYAAQACAAgAAAAOAAUAAQACAAgAAAAOAAQAAQACAAgAAAAOAAMAAQACAAgAAAANABAAAQACAAgAAAANAA8AAQACAAgAAAANAA4AAQACAAgAAAANAA0AAQACAAgAAAANAAwAAQACAAgAAAANAAsAAQACAAgAAAANAAoAAQACAAgAAAANAAkAAQACAAgAAAANAAgAAQACAAgAAAANAAcAAQACAAgAAAANAAYAAQACAAgAAAANAAUAAQACAAgAAAANAAQAAQACAAgAAAANAAMAAQACAAgAAAAMAA0AAQACAAgAAAAMAAwAAQACAAgAAAAMAAsAAQACAAgAAAAMAAoAAQACAAgAAAAMAAkAAQACAAgAAAAMAAgAAQACAAgAAAAMAAcAAQACAAgAAAAMAAYAAQACAAgAAAAMAAUAAQACAAgAAAAMAAQAAQACAAgAAAAMAAMAAQACAAgAAAALAA0AAQACAAgAAAALAAwAAQACAAgAAAALAAsAAQACAAgAAAALAAoAAQACAAgAAAALAAkAAQACAAgAAAALAAgAAQACAAgAAAALAAcAAQACAAgAAAALAAYAAQACAAgAAAALAAUAAQACAAgAAAALAAQAAQACAAgAAAALAAMAAQACAAgAAAAKAA0AAQACAAgAAAAKAAwAAQACAAgAAAAKAAsAAQACAAgAAAAKAAoAAQACAAgAAAAKAAkAAQACAAgAAAAKAAgAAQACAAgAAAAKAAcAAQACAAgAAAAKAAYAAQACAAgAAAAKAAUAAQACAAgAAAAKAAQAAQACAAgAAAAKAAMAAQACAAgAAAAJAA0AAQACAAgAAAAJAAwAAQACAAgAAAAJAAsAAQACAAgAAAAJAAoAAQACAAgAAAAJAAkAAQACAAgAAAAJAAgAAQACAAgAAAAJAAcAAQACAAgAAAAJAAYAAQACAAgAAAAJAAUAAQACAAgAAAAJAAQAAQACAAgAAAAJAAMAAQACAAgAAAAIAA0AAQACAAgAAAAIAAwAAQACAAgAAAAIAAsAAQACAAgAAAAIAAoAAQACAAgAAAAIAAkAAQACAAgAAAAIAAgAAQACAAgAAAAIAAcAAQACAAgAAAAIAAYAAQACAAgAAAAIAAUAAQACAAgAAAAIAAQAAQACAAgAAAAIAAMAAQACAAgAAAAHAA0AAQACAAgAAAAHAAwAAQACAAgAAAAHAAsAAQACAAgAAAAHAAoAAQACAAgAAAAHAAkAAQACAAgAAAAHAAgAAQACAAgAAAAHAAcAAQACAAgAAAAHAAYAAQACAAgAAAAHAAUAAQACAAgAAAAHAAQAAQACAAgAAAAHAAMAAQACAAgAAAAGAAwAAQACAAgAAAAGAAsAAQACAAgAAAAGAAoAAQACAAgAAAAGAAkAAQACAAgAAAAGAAgAAQACAAgAAAAGAAcAAQACAAgAAAAGAAYAAQACAAgAAAAGAAUAAQACAAgAAAAGAAQAAQACAAgAAAAGAAMAAQACAAgAAAAFAAwAAQACAAgAAAAFAAsAAQACAAgAAAAFAAoAAQACAAgAAAAFAAkAAQACAAgAAAAFAAgAAQACAAgAAAAFAAcAAQACAAgAAAAFAAYAAQACAAgAAAAFAAUAAQACAAgAAAAFAAQAAQACAAgAAAAFAAMAAQACAAgAAAAEAAwAAQACAAgAAAAEAAsAAQACAAgAAAAEAAoAAQACAAgAAAAEAAkAAQACAAgAAAAEAAgAAQACAAgAAAAEAAcAAQACAAgAAAAEAAYAAQACAAgAAAAEAAUAAQACAAgAAAAEAAQAAQACAAgAAAAEAAMAAQACAAgAAAADAAwAAQACAAgAAAADAAsAAQACAAgAAAADAAoAAQACAAgAAAADAAkAAQACAAgAAAADAAgAAQACAAgAAAADAAcAAQACAAgAAAADAAYAAQACAAgAAAADAAUAAQACAAgAAAADAAQAAQACAAgAAAADAAMAAQACAAgAAAAjABEAAQACAAIAAAAjABAAAQACAAIAAAAjAA8AAQACAAIAAAAjAA4AAQACAAIAAAAjAA0AAQACAAIAAAAjAAwAAQACAAIAAAAjAAsAAQACAAIAAAAjAAoAAQACAAIAAAAjAAkAAQACAAIAAAAjAAgAAQACAAIAAAAjAAcAAQACAAIAAAAjAAYAAQACAAIAAAAjAAUAAQACAAIAAAAjAAQAAQACAAIAAAAjAAMAAQACAAIAAAAjAAIAAQACAAIAAAAiABEAAQACAAIAAAAiABAAAQACAAIAAAAiAA8AAQACAAIAAAAiAA4AAQACAAIAAAAiAA0AAQACAAIAAAAiAAwAAQACAAIAAAAiAAsAAQACAAIAAAAiAAoAAQACAAIAAAAiAAkAAQACAAIAAAAiAAgAAQACAAIAAAAiAAcAAQACAAIAAAAiAAYAAQACAAIAAAAiAAUAAQACAAIAAAAiAAQAAQACAAIAAAAiAAMAAQACAAIAAAAiAAIAAQACAAIAAAAjABMAAQACAAIAAAAjABIAAQACAAIAAAAiABMAAQACAAIAAAAiABIAAQACAAIAAAAhABMAAQACAAIAAAAhABIAAQACAAIAAAAgABMAAQACAAIAAAAgABIAAQACAAIAAAAfABMAAQACAAIAAAAfABIAAQACAAIAAAAeABMAAQACAAIAAAAeABIAAQACAAIAAAAdABMAAQACAAIAAAAdABIAAQACAAIAAAAcABMAAQACAAIAAAAcABIAAQACAAIAAAAbABMAAQACAAIAAAAbABIAAQACAAIAAAAaABMAAQACAAIAAAAaABIAAQACAAIAAAAZABMAAQACAAIAAAAZABIAAQACAAIAAAAYABMAAQACAAIAAAAYABIAAQACAAIAAAAXABMAAQACAAIAAAAXABIAAQACAAIAAAAWABMAAQACAAIAAAAWABIAAQACAAIAAAAVABMAAQACAAIAAAAVABIAAQACAAIAAAAUABMAAQACAAIAAAAUABIAAQACAAIAAAATABMAAQACAAIAAAATABIAAQACAAIAAAASABMAAQACAAIAAAASABIAAQACAAIAAAARABMAAQACAAIAAAARABIAAQACAAIAAAAQABMAAQACAAIAAAAQABIAAQACAAIAAAAPABMAAQACAAIAAAAPABIAAQACAAIAAAAOABMAAQACAAIAAAAOABIAAQACAAIAAAANABMAAQACAAIAAAANABIAAQACAAIAAAAMABMAAQACAAIAAAAMABIAAQACAAIAAAALABMAAQACAAIAAAALABIAAQACAAIAAAAKABMAAQACAAIAAAAKABIAAQACAAIAAAALABEAAQACAAIAAAALABAAAQACAAIAAAALAA8AAQACAAIAAAAKABEAAQACAAIAAAAKABAAAQACAAIAAAAKAA8AAQACAAIAAAAJABEAAQACAAIAAAAJABAAAQACAAIAAAAJAA8AAQACAAIAAAAJABMAAQACAAIAAAAJABIAAQACAAIAAAAIABMAAQACAAIAAAAIABIAAQACAAIAAAAIABEAAQACAAIAAAAIABAAAQACAAIAAAAHABMAAQACAAIAAAAHABIAAQACAAIAAAAHABEAAQACAAIAAAAHABAAAQACAAIAAAAGABMAAQACAAIAAAAGABIAAQACAAIAAAAGABEAAQACAAIAAAAGABAAAQACAAIAAAAFABMAAQACAAIAAAAFABIAAQACAAIAAAAFABEAAQACAAIAAAAFABAAAQACAAIAAAAEABMAAQACAAIAAAAEABIAAQACAAIAAAAEABEAAQACAAIAAAAEABAAAQACAAIAAAADABMAAQACAAIAAAADABIAAQACAAIAAAADABEAAQACAAIAAAADABAAAQACAAIAAAACABMAAQACAAIAAAACABIAAQACAAIAAAACABEAAQACAAIAAAACABAAAQACAAIAAAAFAA8AAQACAAIAAAAFAA4AAQACAAIAAAAEAA8AAQACAAIAAAAEAA4AAQACAAIAAAADAA8AAQACAAIAAAADAA4AAQACAAIAAAACAA8AAQACAAIAAAACAA4AAQACAAIAAAAIAA8AAQACAAIAAAAHAA8AAQACAAIAAAAGAA8AAQACAAIAAAABABMAAQACAAIAAAABABIAAQACAAIAAAABABEAAQACAAIAAAABABAAAQACAAIAAAABAA8AAQACAAIAAAABAA4AAQACAAIAAAABAA0AAQACAAIAAAABAAwAAQACAAIAAAABAAsAAQACAAIAAAABAAoAAQACAAIAAAABAAkAAQACAAIAAAABAAgAAQACAAIAAAABAAcAAQACAAIAAAABAAYAAQACAAIAAAABAAUAAQACAAIAAAABAAQAAQACAAIAAAABAAMAAQACAAIAAAABAAIAAQACAAIAAAABAAEAAQACAAIAAAABAAAAAQACAAIAAAAAABMAAQACAAIAAAAAABIAAQACAAIAAAAAABEAAQACAAIAAAAAABAAAQACAAIAAAAAAA8AAQACAAIAAAAAAA4AAQACAAIAAAAAAA0AAQACAAIAAAAAAAwAAQACAAIAAAAAAAsAAQACAAIAAAAAAAoAAQACAAIAAAAAAAkAAQACAAIAAAAAAAgAAQACAAIAAAAAAAcAAQACAAIAAAAAAAYAAQACAAIAAAAAAAUAAQACAAIAAAAAAAQAAQACAAIAAAAAAAMAAQACAAIAAAAAAAIAAQACAAIAAAAAAAEAAQACAAIAAAAAAAAAAQACAAIAAAAjAAEAAQACAAIAAAAjAAAAAQACAAIAAAAiAAEAAQACAAIAAAAiAAAAAQACAAIAAAAhAAEAAQACAAIAAAAhAAAAAQACAAIAAAAgAAEAAQACAAIAAAAgAAAAAQACAAIAAAAfAAEAAQACAAIAAAAfAAAAAQACAAIAAAAeAAEAAQACAAIAAAAeAAAAAQACAAIAAAAdAAEAAQACAAIAAAAdAAAAAQACAAIAAAAcAAEAAQACAAIAAAAcAAAAAQACAAIAAAAbAAEAAQACAAIAAAAbAAAAAQACAAIAAAAaAAEAAQACAAIAAAAaAAAAAQACAAIAAAAZAAEAAQACAAIAAAAZAAAAAQACAAIAAAAYAAEAAQACAAIAAAAYAAAAAQACAAIAAAAXAAEAAQACAAIAAAAXAAAAAQACAAIAAAAWAAEAAQACAAIAAAAWAAAAAQACAAIAAAAVAAEAAQACAAIAAAAVAAAAAQACAAIAAAAUAAEAAQACAAIAAAAUAAAAAQACAAIAAAATAAEAAQACAAIAAAATAAAAAQACAAIAAAASAAEAAQACAAIAAAASAAAAAQACAAIAAAARAAEAAQACAAIAAAARAAAAAQACAAIAAAAQAAEAAQACAAIAAAAQAAAAAQACAAIAAAAPAAEAAQACAAIAAAAPAAAAAQACAAIAAAAOAAEAAQACAAIAAAAOAAAAAQACAAIAAAANAAEAAQACAAIAAAANAAAAAQACAAIAAAAMAAEAAQACAAIAAAAMAAAAAQACAAIAAAALAAEAAQACAAIAAAALAAAAAQACAAIAAAAKAAEAAQACAAIAAAAKAAAAAQACAAIAAAAJAAEAAQACAAIAAAAJAAAAAQACAAIAAAAIAAEAAQACAAIAAAAIAAAAAQACAAIAAAAHAAEAAQACAAIAAAAHAAAAAQACAAIAAAAGAAEAAQACAAIAAAAGAAAAAQACAAIAAAAFAAEAAQACAAIAAAAFAAAAAQACAAIAAAAEAAEAAQACAAIAAAAEAAAAAQACAAIAAAADAAEAAQACAAIAAAADAAAAAQACAAIAAAACAAEAAQACAAIAAAACAAAAAQACAAIAAAA=")
tile_set = ExtResource("1_c81co")

[node name="Decor" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAEAAoAAgACAAMAAAAEAAsAAgACAAQAAAAFAAoAAgADAAMAAAAFAAsAAgADAAQAAAAIAAoAAgACAAMAAAAIAAsAAgACAAQAAAAJAAoAAgADAAMAAAAJAAsAAgADAAQAAAANAAoAAgACAAMAAAANAAsAAgACAAQAAAAOAAoAAgADAAMAAAAOAAsAAgADAAQAAAA=")
tile_set = ExtResource("1_c81co")

[node name="Background" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_set = ExtResource("1_c81co")

[node name="Door" parent="." instance=ExtResource("2_518a5")]
position = Vector2(952, 520)
next_level = "welcome_level.tscn"

[node name="Key" parent="." instance=ExtResource("3_vaqfn")]
position = Vector2(776, 448)
gravity_scale = 0.0

[node name="PlayerSpawner" type="Marker2D" parent="."]
position = Vector2(168, 152)
script = ExtResource("4_o5gmv")

[node name="Button" parent="." instance=ExtResource("5_cj3ad")]
position = Vector2(584, 528)

[node name="BlackHole" type="Area2D" parent="."]
position = Vector2(888, 368)
collision_layer = 0
collision_mask = 6
script = ExtResource("10_gxl6j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackHole"]
shape = SubResource("CircleShape2D_x6lj5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BlackHole"]
sprite_frames = SubResource("SpriteFrames_oblhc")
autoplay = "default"
frame_progress = 0.597088

[node name="KeySpawn" type="Marker2D" parent="."]
position = Vector2(776, 448)

[node name="Platform" parent="." instance=ExtResource("11_sskg7")]
position = Vector2(352, 432)

[node name="DropBox" parent="." instance=ExtResource("9_5ywgi")]
position = Vector2(440, 464)

[node name="DropBox2" parent="." instance=ExtResource("9_5ywgi")]
position = Vector2(472, 464)

[node name="DropBox3" parent="." instance=ExtResource("9_5ywgi")]
position = Vector2(504, 464)

[node name="DropBox4" parent="." instance=ExtResource("9_5ywgi")]
position = Vector2(536, 464)

[node name="WeightPlatform" parent="." instance=ExtResource("10_qsupa")]
position = Vector2(592, 456)

[node name="Coin" parent="." instance=ExtResource("14_sjfhm")]
position = Vector2(624, 200)

[node name="Spring" parent="." instance=ExtResource("16_16d4q")]
position = Vector2(696, 528)

[node name="EvilBeePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_m5r1r")

[node name="EvilBeeFollowPath" type="PathFollow2D" parent="EvilBeePath"]
position = Vector2(990, 211)
rotation = -3.12015
rotates = false
script = ExtResource("19_wofl2")

[node name="EvilBee" parent="EvilBeePath/EvilBeeFollowPath" instance=ExtResource("17_cybxe")]
collision_layer = 0
collision_mask = 6

[connection signal="button_pressed" from="Button" to="." method="_on_button_button_pressed"]
[connection signal="body_entered" from="BlackHole" to="BlackHole" method="_on_body_entered"]
[connection signal="body_entered" from="EvilBeePath/EvilBeeFollowPath/EvilBee" to="EvilBeePath/EvilBeeFollowPath/EvilBee" method="_on_body_entered"]
